--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
+
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "exclude": ["node_modules","/src/__test__"]
+ 
 }
