--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@hookform/error-message": "^2.0.1",
+    "@mui/joy": "5.0.0-beta.51",
+    "@mui/styled-engine": "^6.2.1",
     "antd": "^5.17.2",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
