--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.17.2",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "decimal.js": "^10.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1"
