--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/joy": "5.0.0-beta.51",
     "@mui/styled-engine": "^6.2.1",
     "antd": "^5.17.2",
@@ -21,7 +22,8 @@
     "decimal.js": "^10.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.1"
+    "react-hook-form": "^7.54.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
